--- a/templates/test.html
+++ b/templates/test.html
@@ -19,5 +19,14 @@
     <input type='file' accept='text/plain' onchange='openFile(event)'><br>
     <div style="width:500px;height: 400px" id='output'>
     </div>
+    <div style="display:block;">
+        <select>
+            <option value="0"> Please Select </option>>
+
+        </select>
+        <select>
+            <option>Select Game Type</option>>
+        </select>
+    </div>
     </body>
     </html>
